# fprime-wasm

./: Cargo.toml  README.md
example/: Cargo.toml  build.rs
example/src/: RefTopologyDictionary.rs  dictionary.rs  main.rs  serializable.rs
fprime/: Cargo.toml
fprime/src/: dict.rs  lib.rs
fprime_build/: Cargo.toml
fprime_build/src/: commands.rs  context.rs  lib.rs  telemetry.rs  types.rs  util.rs
fprime_build/src/test/: RefTopologyDictionary.ref.rs  test.rs
fprime_core/: Cargo.toml
fprime_core/src/: internal.rs  lib.rs  panic.rs  serializable.rs
fprime_dictionary/: Cargo.toml
fprime_dictionary/src/: lib.rs
fprime_dictionary/src/test/: RefTopologyDictionary.json  RefTopologyDictionary.ref.txt  test.rs
fprime_internal/: Cargo.toml
fprime_internal/src/: lib.rs
fprime_macros/: Cargo.toml
fprime_macros/src/: lib.rs
