[workspace]
resolver = "3"
members = [
    "example",
    "fprime_macros",
    "fprime_build",
    "fprime_dictionary",
    "fprime_core"
]

default-members = [
    "fprime_macros",
    "fprime_build",
    "fprime_dictionary",
    "fprime_core"
]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
debug = false
strip = true
