[package]
name = "fprime_build"
version = "0.1.0"
edition = "2024"

[dependencies]
fprime_dictionary = { path = "../fprime_dictionary" }
proc-macro2 = "1.0.103"
quote = "1.0.42"
convert_case = "0.10.0"
quote-doctest = "0.3.2"
prettyplease = "0.2.37"
syn = "2.0.111"

[dev-dependencies]
pretty_assertions = "1.4.1"
